k8s/apps/media/templates/traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: search
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: media-prowlarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: media-sonarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: media-radarr
  timeout:
    http:
      requestTimeout: 100s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyfin-download
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: media-jellyfin
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: media-upbrr
  timeout:
    http:
      requestTimeout: 7200s
